fix(Navigation): remove padding from list items for better alignment

--- a/src/app/_components/navigation/navigation.module.css
+++ b/src/app/_components/navigation/navigation.module.css
@@ -38,6 +38,10 @@
     margin: 0;
   }
 
+  & > li {
+    padding: 0;
+  }
+
   @media (width <= 640px) {
     display: none;
   }
